--- a/src/styles/general/media-queries.css
+++ b/src/styles/general/media-queries.css
@@ -1,3 +1,12 @@
+@media screen and (max-width:1200px){
+    .img-opened{
+        object-fit: contain;
+        height: 100dvh;
+        max-width: 100dvh;
+        border-radius: 15px;
+    }
+}
+
 @media screen and (max-width:770px) {
     /* header */
     .header__nav-items{
@@ -11,7 +20,7 @@
         position: absolute;
         left: 0;
         top: -115%;
-        z-index: 10;
+        z-index: 100;
 
         width: 100vw;
         min-height: 100lvh;
