--- a/src/styles/instructions-page.css
+++ b/src/styles/instructions-page.css
@@ -264,7 +264,9 @@ body{
     transition: var(--transition-fast);
 }
 .instructions__info-btn-text{
+    appearance: none;
     font-size: 24px;
+    color: var(--basic-dark-2);
 }
 .instructions__info-btn:hover{
     -webkit-transform: translateY(10%);
@@ -285,7 +287,7 @@ body{
     transition: var(--transition-fast);
 }
 .instructions__image-popup{
-    width: 100lvw;
+    width: 100dvw;
     height: 100dvh;
     background-color: rgb(0, 0, 0, 0.5);
     position: fixed;
@@ -304,7 +306,7 @@ body{
             align-items: center;
 }
 .instructions__popup-img-wrapper{
-    max-width: 900px;
+    max-width: 100vw;
     height: auto;
     padding: 0 25px;
     margin: 0 auto;
@@ -341,8 +343,7 @@ body{
 }
 .img-opened{
     height: 90dvh;
-    max-width: 100%;
-    border-radius: none;
+    width: 100%;
 }
 .instructions__popup-img-wrapper:hover .instructions__popup-collapse-icon{
     opacity: 1;
